src/snapshots/monkey_language_server__parser__test__if_expr_unhappy_2.snap
---
source: src/parser.rs
description: "if (x +) { x } else { x + 1 }"
expression: stmts
---
[
    If {
        token: Token(If, "if", (0,0)->(0,2)),
        condition: Err(
            Err(UnexpectedToken("SyntaxError: Unexpected ')'."), (0,7)->(0,8)),
        ),
        consequence: Ok(
            Block {
                token: Token(LBrace, "{", (0,9)->(0,10)),
                statements: [
                    Ok(
                        Identifier {
                            token: Token(Identifier, "x", (0,11)->(0,12)),
                            name: "x",
                        },
                    ),
                ],
            },
        ),
        alternative: Ok(
            Some(
                Block {
                    token: Token(LBrace, "{", (0,20)->(0,21)),
                    statements: [
                        Ok(
                            Infix {
                                token: Token(Plus, "+", (0,24)->(0,25)),
                                left: Identifier {
                                    token: Token(Identifier, "x", (0,22)->(0,23)),
                                    name: "x",
                                },
                                right: Int {
                                    token: Token(Int, "1", (0,26)->(0,27)),
                                    value: 1,
                                },
                            },
                        ),
                    ],
                },
            ),
        ),
    },
]
