src/snapshots/monkey_language_server__parser__test__if_expr_unhappy_6.snap
---
source: src/parser.rs
description: "if (x { x }"
expression: stmts
---
[
    If {
        token: Token(If, "if", (0,0)->(0,2)),
        condition: Err(
            Err(ExpectedTokenNotFound("SyntaxError: Expected ')' not found."), (0,6)->(0,7)),
        ),
        consequence: Ok(
            Block {
                token: Token(LBrace, "{", (0,6)->(0,7)),
                statements: [
                    Identifier {
                        token: Token(Identifier, "x", (0,8)->(0,9)),
                        name: "x",
                    },
                ],
            },
        ),
        alternative: Ok(
            None,
        ),
    },
]
