src/snapshots/monkey_language_server__parser__test__if_expr_unhappy_7.snap
---
source: src/parser.rs
description: "if (x) { x else { x }"
expression: stmts
---
[
    If {
        token: Token(If, "if", (0,0)->(0,2)),
        condition: Ok(
            Identifier {
                token: Token(Identifier, "x", (0,4)->(0,5)),
                name: "x",
            },
        ),
        consequence: Err(
            Err(UnexpectedEof("SyntaxError: Unexpected eof."), (0,20)->(0,21)),
        ),
        alternative: Ok(
            None,
        ),
    },
]
