src/snapshots/monkey_language_server__parser__test__infix_unhappy_5.snap
---
source: src/parser.rs
description: "@ + 1"
expression: stmts
---
[
    Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,0)->(0,1)),
    Err(UnexpectedToken("SyntaxError: Unexpected '+'."), (0,2)->(0,3)),
]
