src/snapshots/monkey_language_server__parser__test__int_expr.snap
---
source: src/parser.rs
description: "123"
expression: stmts
---
[
    Int { token: Token(Int, "123", (0,0)->(0,3)), value: 123 },
]
